Fix paragraph spacing

--- a/src/components/paragraph.scss
+++ b/src/components/paragraph.scss
@@ -28,5 +28,5 @@
   color: map-get($colors, grey-text);
   line-height: 4rem;
   margin: 0;
-  padding: 1.4rem 0 3.6rem 0;
+  padding: 0.4rem 0 2.6rem 0;
 }
